test/Fixtures/InvalidSuites/SetupParams.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites;

<<TestSuite>>
class SetupParams
{
    <<Setup>>
    public function setup(string $required) : void
    {
    }
}
